--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "react front end and twitter api node/express back end",
   "main": "index.js",
+  "engines": {
+    "node": "10.16.0",
+    "npm": "6.13.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "build": "npm run build"
   },
   "repository": {
     "type": "git",
